# pureG4

./: flake.nix  justfile
flake/: helpers.nix  outputs.nix
src/: exampleB1.cc  exampleB1.cc~  meson.build
src-old/: meson.build  pureG4.cc
test/: meson.build
